--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -58,15 +58,13 @@
          </div>
      </form>
  </div>
- <script>
-
-
- </script>
-
-
 
  <!-- creates signup sheet -->
 <div id="signup">
+    <div class="popup" onclick="myFunction()" id="popuptoggle">Click me to toggle the popup!
+        <span class="popuptext" id="myPopup">A Simple Popup!</span>
+    </div>
+
     <form name="signupform" id="signupform" >
         <p id="legend">Create your account!</p><br><br>
         <div id="column">
@@ -84,6 +82,9 @@
             <br>
             <input type="checkbox" id="AGBcheckbox">
             <label for="AGBcheckbox" id="AGBlabel" >I have read the <a onclick="openAGB()" href="">AGB's</a></label>
+            <!--<div class="popup" >
+                <span class="popuptext" id="myPopup">Please accept the AGB's to register!</span>
+            </div>-->
         </div>
         <div id="column">
             <label for="username">Username:</label>
@@ -101,26 +102,14 @@
             <input type="submit" value="Create account" onclick="registerUser()" >
             <br><br>
             <button id="buttonLogin" onclick="showLogin()">Back to login</button>
-        </div>
-        <br>
-       <!-- <div id="lower2">
-            <input type="checkbox" id="AGBcheckbox">
-            <label for="AGBcheckbox" >I have read the <p onclick="openAGB()" href="">AGB's</p></label>
-            <input type="submit" value="Create account" onclick="registerUser()" >
-
-            <div class="popup" >
-            <span class="popuptext" id="myPopup">Please accept the AGB's to register!</span>
-            </div>
-
             <button class="helpRe">Help
                 <span class="helpText"> Please enter the required information and click on the "Create Account" button to register.
                 </span>
             </button>
-
-
-        </div> -->
+        </div>
     </form>
 </div>
+
 <style>
 
     /* The Modal (background) */
