--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -45,7 +45,14 @@
             margin-bottom: 30px;
             margin-top: 80px;
             text-shadow: 2px 2px #E9AD9C;
-            text-align: center; }
+            text-align: center;
+        }
+
+        p {
+            margin-top: 10px;
+        }
+
+
 
     </style>
 </head>
@@ -121,15 +128,15 @@
     </p>
 </div>
 
-<button class="accordion">How can I </button>
+<button class="accordion">How can I search for other shootouts?</button>
 <div class="panel">
-    <p>
+    <p>If you want to find someone else's shootout, just search for the name of the shootout in the search bar on the top left of the page.
     </p>
 </div>
 
-<button class="accordion"></button>
+<button class="accordion">Will my pictures be made available to third parties?</button>
 <div class="panel">
-    <p>
+    <p>Your pictures belong to you only. Klicks does not forward any pictures to our partners or other websites.
     </p>
 </div>
 <button class="accordion"></button>
