--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -13,6 +13,10 @@
     <script type=text/javascript src = "compare.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
     <!--  <script src="jquery-3.3.1.min.js"></script> -->
+
+
+
+
   </head>
 
   <body>
@@ -99,10 +103,10 @@
             <div class="modal-content">
                 <span class="close2" onclick="closeinfomodal()">&times;</span>
                 <div class="modal-header">
-                    <h1> Das Shootout ist vorbei!</h1>
+                    <h1 style="text-align: center">You have completed the shootout!</h1>
                 </div>
                 <div id ="modalbody" class="modal-body">
-                    <h2>Schau Dir jetzt das Ranking des Shootouts an!</h2>
+                    <h2 style="text-align: center">Have a look at the ranking of the shootout!</h2>
                 </div>
             </div>
         </div>
