added AGB.html to all pages

--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -139,16 +139,34 @@
     <p>Your pictures belong to you only. Klicks does not forward any pictures to our partners or other websites.
     </p>
 </div>
+
+<button class="accordion">How can I upload pictures to be used in a shootout?</button>
+<div class="panel">
+    <p>To upload pictures that you can use to fill a shootout, go to your profile and klick on the "Upload Picture" button.
+    </p>
+</div>
+
+<button class="accordion">How many pictures are in a shootout?</button>
+<div class="panel">
+    <p>Shootouts can contain pictures
+    </p>
+</div>
+
 <button class="accordion"></button>
 <div class="panel">
     <p>
     </p>
 </div>
+
 <button class="accordion"></button>
 <div class="panel">
     <p>
     </p>
 </div>
+
+
+
+
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
