added AGB.html to all pages

--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -148,7 +148,7 @@
 
 <button class="accordion">How many pictures are in a shootout?</button>
 <div class="panel">
-    <p>Shootouts can contain pictures
+    <p>Shootouts can contain between 5 and 25 pictures.
     </p>
 </div>
 
