--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -67,14 +67,14 @@
 
         <h1>Search for Users</h1>
         <input  type="text" class="form-control" id="user_input" placeholder="Search for users by username" onkeyup="searchUser()">
-        <select id="mySelect">
+        <!--<select id="mySelect">
             <option value="username">Search by Username</option>
             <option value="firstname">Search by Firstname</option>
             <option value="lastname">Search by Lastname</option>
-        </select>
+        </select> -->
 
         <table id="result" border="solid black" >
-        <tr>
+        <tr id="tablerow">
             <th class="column">Username</th>
             <th class="column">Firstname</th>
             <th class="column">Lastname</th>
