--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fallstudie</title>
-    <link rel="icon" href="Herzbeben_Logo.png">
+    <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="compare_profile.css" type="text/css">
     <link rel="stylesheet" href="shootout.css" type="text/css">
     <!-- Latest compiled and minified CSS -->
