--- a/frontend/static/html/pictureRanking.html
+++ b/frontend/static/html/pictureRanking.html
@@ -65,7 +65,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="allphotos.html">All Pictures</a></li>
-                            <li><a href="FAQ.html">Help</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
@@ -128,7 +128,7 @@
                         document.getElementById('Secondpic').src = wins[1].photo.picture;
                         document.getElementById('secondpicwins').innerText = "Wins: "+ wins[1].wins;
                         document.getElementById('Thirdpic').src = wins[2].photo.picture;
-                        document.getElementById('thirdpicwins').innerText = "Winss: "+ wins[2].wins;
+                        document.getElementById('thirdpicwins').innerText = "Wins: "+ wins[2].wins;
                     }
                 };
             };
