--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -122,22 +122,29 @@
             <div class="modal-content">
                 <span class="close" onclick="closemodcS()">&times;</span>
                 <div class="modal-header">
+
                     <h2> Create your shootout!</h2>
                 </div>
                 <div class="modal-body">
-                    <form>
+
                         <label for="nameShootout">Name</label>
                         <input type="text" id="nameShootout">
-
-                        <!--    <select>
-                        <option> private </option>
-                         <option> public</option>
-                    </select>-->
-                        <button class="helpBtn5">Help
-                            <span class="helpText">Please enter the name of your new shootout. <br>
+                        <p></p>
+                            <label>Select a category:</label>
+                            <select style="height: 27px">
+                            <option>User Shootout</option>
+                            <option>Animals</option>
+                            <option>Art</option>
+                            <option>Fashion</option>
+                            <option>Food</option>
+                            <option>Nature</option>
+                            <option>Portrait</option>
+                    </select>
+                    <button class="helpBtn5">Help
+                        <span class="helpText">Please enter the name of your new shootout. <br>
     If you want to share this shootout with everyone select "public" below.
     </span>
-                        </button>
+                    </button>
                     </form>
                 </div>
                 <div class="modal-footer">
