--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -75,8 +75,9 @@
                     <button type="button" id="create_shootout" onclick="openModalcS()">Create shootout</button>
                     <p>
                     <div class="dropdownKategorie">
-                    <button class="dropBtnKat">Category <span class="caret"></span></button>
+                    <button class="dropBtnKat">Search by category <span class="caret"></span></button>
                         <div class="dropdown-content">
+                            <a href="#">User Shootout</a>
                             <a href="#">Animals</a>
                             <a href="#">Art</a>
                             <a href="#">Fashion</a>
