--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -27,8 +27,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
+                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="40px" height="40px"> </a>
+                <div class="heading">DATA ANALYTICS</div>
+                <button class="helpBtn10">Help
+                    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
+            </span>
+                </button>
             </div>
+
+            <!--search bar
+            div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+            </div>
+               <button type="submit" class="btn btn-default">Submit</button-->
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -38,24 +49,16 @@
                      -->
                 </ul>
                 <form class="navbar-form navbar-left">
-                    <button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
-                    <!-- <div class="form-group">
+                    <!--button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
+                     <!--div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button> -->
                 </form>
-                <ul class="nav navbar-nav navbar-right">
+                <!--ul class="nav navbar-nav navbar-right">
+                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
-                    <li class="dropdown">
-                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
-                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="pictureRanking.html">Picture Ranking</a></li>
-                            <li><a href="photographer.html">Photographer Ranking</a></li>
-                            <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-                            <li role="separator" class="divider"></li>
-                        </ul>
-                    </li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li class="active"><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -67,23 +70,20 @@
                             <li><a href="#">Sign out</a></li>
                         </ul>
                     </li>
-                </ul>
+                </ul>-->
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 </header>
-<!-- Seitenüberschrift-->
+<!-- Seitenüberschrift
 <header id="heading">
     <h1 style=margin-top:0px;>DATA ANALYTICS</h1>
-</header>
+</header>-->
 
-<!--Help button-->
-<button class="helpBtn1">Help
-    <span class="helpText">This is your data analytics dashboard. It is divided into 3 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
-            </span>
-</button>
 
-<!-- JavaScript for top navbar -->
+
+
+<!-- JavaScript for top navbar-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
 </script>
 
@@ -91,7 +91,36 @@
     <div>Geolocation</div>
     <div>User's Preferences</div>
     <div>Standard Variance</div>
+    <div>DataSet4</div>
+    <div>DataSet5</div>
+    <div>DataSet6</div>
 </div>
+<script>
+    window.onload = function () {
+        var userID = cookiewerteHolen();
+        var AdminID = "129";
+        if (userID !== AdminID ) {
+            console.log("kein Admin");
+            window.location.replace("http://localhost:8080/compare.html");
+        }
+        else if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+    };
+
+    function cookiewerteHolen () {
+        var Wert = "";
+        if (document.cookie) {
+            var Wertstart = document.cookie.indexOf("=") + 1;
+            var Wertende = document.cookie.indexOf(";");
+            if (Wertende == -1) {
+                Wertende = document.cookie.length;
+            }
+            Wert = document.cookie.substring(Wertstart, Wertende);
+        }
+        return Wert;
+    }
+</script>
 </body>
 </html>
 
