--- a/frontend/static/html/page.html
+++ b/frontend/static/html/page.html
@@ -124,7 +124,7 @@
 
                     for (var i = 0; i < anzahluser; i++) {
                         result.innerHTML += "<tr> " +
-                            "<td id='td1 " + i + "'><a href=\"otherusersDataAnalyticsDashboard.html\?uid="+userlist[i].id+"\" >"+ userlist[j].username + "</a></td>" +
+                            "<td id='td1 " + i + "'><a href=\"otherusersDataAnalyticsDashboard.html\?uid="+userlist[i].id+"\" >"+ userlist[i].username + "</a></td>" +
                             "<td id='td2 " + i + " '>" + userlist[i].firstName + "</td>" +
                             "<td id='td3 " + i + "'>" + userlist[i].name + "</td>" +
                             "<td id='td4 " + i + " '>" + userlist[i].email + "</td>" +
