added AGB.html to all pages

--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -110,6 +110,13 @@
 
 <h1>Frequently Asked Questions</h1>
 
+<button class="accordion">How can I create a klicks account?</button>
+<div class="panel">
+    <p>To create an account, click on "Create Account". You have to enter a username, your e-mail address and your name, as well as a password.
+    </p>
+</div>
+
+
 <button class="accordion">How can I create a shootout?</button>
 <div class="panel">
     <p>To create a shootout, please click on "Compare Pictures". You can then select "Create shootout" on the bottom left of the page.</p>
@@ -158,11 +165,7 @@
     </p>
 </div>
 
-<button class="accordion"></button>
-<div class="panel">
-    <p>
-    </p>
-</div>
+
 
 
 
