category shootout finished

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -138,14 +138,14 @@
                         <input type="text" id="nameShootout">
                         <p></p>
                             <label>Select a category:</label>
-                            <select style="height: 27px">
-                            <option>User Shootout</option>
-                            <option>Animals</option>
-                            <option>Art</option>
-                            <option>Fashion</option>
-                            <option>Food</option>
-                            <option>Nature</option>
-                            <option>Portrait</option>
+                    <select id = "creatsocategory" style="height: 27px">
+                        <option selected value="">User Shootout</option>
+                        <option value="Animals">Animals</option>
+                        <option value="Art">Art</option>
+                        <option value="Fashion">Fashion</option>
+                        <option value="Food">Food</option>
+                        <option value="Nature">Nature</option>
+                        <option value="Portrait">Portrait</option>
                     </select>
 
                     </form>
