--- a/frontend/static/html/pictureRanking.html
+++ b/frontend/static/html/pictureRanking.html
@@ -54,7 +54,7 @@
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="pictureRanking.html">Picture Ranking</a></li>
-                            <li><a href="photographer.html">Photographer Ranking</a></li>
+                            <li><a href="photographerRanking.html">Photographer Ranking</a></li>
                             <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
