--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -272,3 +272,9 @@
         upload. <br> To sign out please click on the button "Sign out" on the drop-
         down button "Menu".</span>
     </button>
+
+    <footer class="footer">
+        <p>Klicks Inc. © 2018</p>
+    </footer>
+
+    </body>
