--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -204,11 +204,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
 
-
+<footer class="footer">
+<p>Klicks Inc. © 2018</p>
+</footer>
 
 </body>
 
 
 
 </html>
-
