--- a/frontend/static/html/AGB.html
+++ b/frontend/static/html/AGB.html
@@ -325,6 +325,9 @@
     and you may not make any representations on behalf of or bind klicks in any manner.
 </div>
 
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
 
 </body>
 </html>
