--- a/frontend/static/html/leaderboards.html
+++ b/frontend/static/html/leaderboards.html
@@ -113,5 +113,10 @@
     window.location.replace("http://localhost:8080/shootoutRanking.html");
     }
 </script>
+
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
+
 </body>
 </html>
