--- a/frontend/static/html/otherusersDataAnalyticsDashboard.html
+++ b/frontend/static/html/otherusersDataAnalyticsDashboard.html
@@ -126,5 +126,8 @@
     window.location.replace("http://localhost:8080/page.html");
 }
 </script>
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
 </body>
 </html>
