--- a/frontend/static/html/otherusersprofile.html
+++ b/frontend/static/html/otherusersprofile.html
@@ -263,6 +263,10 @@
         }
     }
 </script>
+
+    <footer class="footer">
+        <p>Klicks Inc. © 2018</p>
+    </footer>
     <!--Help button-->
     <button class="helpBtn2">Help
         <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
