--- a/frontend/static/html/page.html
+++ b/frontend/static/html/page.html
@@ -165,6 +165,10 @@ function locationChange (){
 
 </script>
 
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
+
 </body>
 
 </html>
