--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -212,6 +212,8 @@ console.log('shootout gesendet');
        </span>
     </button>
 </div>
-
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
 </body>
 </html>
