--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FAQ</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
-    <!-- <link rel="stylesheet" href="compare_profile.css"> -->
+    <link rel="stylesheet" href="compare_profile.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <script type=text/javascript src = "index.js"></script> -->
@@ -141,5 +141,10 @@
         });
     }
 </script>
+
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
+
 </body>
 </html>
