--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -165,6 +165,8 @@
     //document.getElementById('bestpic').src = link;
 
 </script>
-
+  <footer class="footer">
+      <p>Klicks Inc. © 2018</p>
+  </footer>
 </body>
 </html>
