--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -80,8 +80,8 @@
 
 <div id="ranking">
     <br>
-    <h1>Top ranked pictures</h1>
-    <h2>The 3 best pictures</h2>
+    <h1>Top ranked photographers</h1>
+    <h2>The 3 best photographers</h2>
     <br><br>
 </div>
 
