--- a/frontend/static/html/impressum.html
+++ b/frontend/static/html/impressum.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fallstudie</title>
+    <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="compare_profile.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script type=text/javascript src = "navbarFunction.js"></script>
@@ -40,15 +41,15 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="impressum.html">Impressum</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
-                    <li class="dropdown">
-                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
-                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="pictureRanking.html">Picture Ranking</a></li>
-                            <li><a href="photographer.html">Photographer Ranking</a></li>
-                            <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-                            <li role="separator" class="divider"></li>
-                        </ul>
-                    </li>
+                    <li><a href="leaderboards.html">Leaderboards</a></li>
+                    <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
+                     <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="pictureRanking.html">Picture Ranking</a></li>
+                        <li><a href="photographerRanking.html">Photographer Ranking</a></li>
+                        <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
+                        <li role="separator" class="divider"></li>
+                    </ul>
+                </li-->
                     <li><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
