--- a/frontend/static/html/leaderboards.html
+++ b/frontend/static/html/leaderboards.html
@@ -46,8 +46,17 @@
                     <button type="submit" class="btn btn-default" >Submit</button>-->
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-                    <li class="active"><a href="#">Compare Pictures</a></li>
+                    <li><a href="impressum.html">Impressum</a></li>
+                    <li><a href="compare.html">Compare Pictures</a></li>
+                    <li><a href="leaderboards.html">Leaderboards</a></li>
+                    <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
+                     <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="pictureRanking.html">Picture Ranking</a></li>
+                        <li><a href="photographerRanking.html">Photographer Ranking</a></li>
+                        <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
+                        <li role="separator" class="divider"></li>
+                    </ul>
+                </li-->
                     <li><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
@@ -110,7 +119,7 @@
     }
 
     function locationChange3 (){
-    window.location.replace("http://localhost:8080/shootoutRanking.html");
+    window.location.replace("http://localhost:8080/shootoutÜbersicht.html");
     }
 </script>
 </body>
