--- a/frontend/static/html/otherusersprofile.html
+++ b/frontend/static/html/otherusersprofile.html
@@ -43,17 +43,17 @@
               <button type="submit" class="btn btn-default">Submit</button> -->
           </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="impressum.html.html">Impressum</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
                 <li><a href="compare.html">Compare Pictures</a></li>
-                <li class="dropdown">
-                    <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
-                    <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="pictureRanking.html">Picture Ranking</a></li>
-                        <li><a href="photographerRanking.html">Photographer Ranking</a></li>
-                        <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-                        <li role="separator" class="divider"></li>
-                    </ul>
-                </li>
+                <li><a href="leaderboards.html">Leaderboards</a></li>
+                <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
+                 <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="pictureRanking.html">Picture Ranking</a></li>
+                    <li><a href="photographerRanking.html">Photographer Ranking</a></li>
+                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
+                    <li role="separator" class="divider"></li>
+                </ul>
+            </li-->
                 <li><a href="profile.html">Profile</a></li>
                 <li class="dropdown">
                     <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
