--- a/frontend/static/html/impressum.html
+++ b/frontend/static/html/impressum.html
@@ -145,8 +145,8 @@
     }
 </style>
 
-<footer class="footer">
-    <p>Klicks Inc. © 2018</p>
+<footer class="footer" align-content="center">
+    <p text-align="center">Klicks Inc. © 2018</p>
 </footer>
 
 </body>
