--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -91,7 +91,7 @@
 <br>
     <p>Select a category:</p>
     <select id = "category" style="height: 27px">
-        <option selected value="">User Shootout</option>
+        <option selected value="US">User Shootout</option>
         <option value="Animals">Animals</option>
         <option value="Art">Art</option>
         <option value="Fashion">Fashion</option>
