--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -116,7 +116,7 @@
                     var userlist = JSON.parse(json);
                     alert (json);
                     alert (userlist[0].name);
-                    anzahluser=(Object.keys(userlist).length)
+                    anzahluser=(Object.keys(userlist).length);
 
 
                     for (var i = 0; i < anzahluser; i++) {
